--- a/css/helper.css
+++ b/css/helper.css
@@ -4984,7 +4984,7 @@ a,
     padding: 30px;
   }
   [data-ckav-sm*="pd-40"] {
-    padding: 40px;
+    padding: 0 40px 140px;
   }
   [data-ckav-sm*="pd-50"] {
     padding: 50px;
